--- a/estilo.css
+++ b/estilo.css
@@ -14,10 +14,19 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Familjen+Grotesk:ital,wght@0,400..700;1,400..700&display=swap');
 
+/* NAVBAR */
+
 * {
     margin:0;
     padding:0;
 }
+
+hr {
+    border: 1px solid #2E0D23 ;
+    opacity: 50%;
+}
+
+h1, h2, h3, h4 {font-family: "Familjen Grotesk", sans-serif;}
 
 header {
     background: rgb(2,0,36);
@@ -55,6 +64,8 @@ nav ul a:last-child {margin: 9px 10px 5px 5px;}
 
 nav ul a:hover {background-color: rgba(2,0,36,1);}
 
+/* BANNER */
+
 main {
     margin: 20px;
     padding: 15px;
@@ -63,8 +74,9 @@ main {
 
 main div#banner-principal div.banner-image {
     width: 100%; 
-    height: 400px;
+    height: 370px;
     background-image: url(imagens/notícias/banner-triangulo.png);
+    background-repeat: no-repeat;
     background-position: center top;
     background-size: 100% auto; /* 100% da imagem no banner */
     transition: 0.5s ease;
@@ -73,11 +85,10 @@ main div#banner-principal div.banner-image {
 main div#banner-principal div.banner-image:hover {
     box-shadow: 1px 1px 10px 1px #2c344379;
     transform: scale(1.05);
+    filter:brightness(50%);
 }
 
-main div#banner-principal {
-    position: relative;
-}
+main div#banner-principal {position: relative;}
 
 main div#banner-principal h2 {
     position: absolute;
@@ -91,3 +102,10 @@ main a, main a:visited, main a:target {
     color: #FFFEDF;
 }
 
+/* NOTICIAS */
+
+main div#banner-principal + h3 {
+    margin-top: 20px;
+    color: #2E0D23;
+    font-size: 30px;
+}
