--- a/estilo.css
+++ b/estilo.css
@@ -67,7 +67,7 @@ nav ul a:hover {background-color: rgba(2,0,36,1);}
 /* BANNER */
 
 main {
-    margin: 20px;
+    margin: 10px 20px 20px 20px;
     padding: 15px;
     width: 60vw;
 }
