update: finalização grid estilo

--- a/estilo.css
+++ b/estilo.css
@@ -112,21 +112,31 @@ main div#noticias-boxes h3 {
 }
 
 main div#noticias-boxes {
+    width: 60vw;
     color: #2E0D23; 
     font-family: Arial, Helvetica, sans-serif;
 }
 
 main div#noticias-boxes div.noticias {
-    display: grid;
+    display:grid;
+    text-align: center;
     margin-top: 20px;
-    align-items: center;
-    grid-template-columns: auto auto;
+    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+    gap: 20px;
 }
 
 main div.not-image {
     width: 100%; 
-    height: 400px;
+    height: 250px;
     background-repeat: no-repeat;
     background-position: center top;
     background-size: 100% auto; /* 100% da imagem no banner */
+    margin-bottom: 5px;
 }
+
+main div.taylor:hover, main div.katy:hover{
+    text-decoration: underline;
+}
+
+main div.taylor div.not-image {background-image: url(imagens/notícias/not-taylor.png);}
+main div.katy div.not-image {background-image: url(imagens/notícias/not-katy.png);}
