updates: correções visuais

--- a/estilo.css
+++ b/estilo.css
@@ -140,3 +140,6 @@ main div.taylor:hover, main div.katy:hover{
 
 main div.taylor div.not-image {background-image: url(imagens/notícias/not-taylor.png);}
 main div.katy div.not-image {background-image: url(imagens/notícias/not-katy.png);}
+
+/* ASIDE */
+
