--- a/css/estilo.css
+++ b/css/estilo.css
@@ -198,19 +198,21 @@ aside input[type="submit"] {
     border: none;
     padding: 10px;
     transition: 0.5s ease-out;
-    margin-top: 15px;
+    margin-top: 10px;
     width: 98%;
 }
 
-aside div form input {
+aside div form input, aside div form textarea {
     margin-bottom: 10px;
     margin-top: 3px;
+    border-radius: 5px;
+    border: none;
 }
 
 aside input[type="submit"]:hover {
     border-radius: 10px;
-    box-shadow: 1px 1px 10px 1px #2c344379;
-    filter:brightness(90%);
+    box-shadow: 1px 1px 10px 1px #432c4079;
+    background-color: rgba(2,0,36,1);
     font-weight: 500;
 }
 
