--- a/css/estilo.css
+++ b/css/estilo.css
@@ -141,12 +141,14 @@ main div.not-image {
     margin-bottom: 5px;
 }
 
-main div.taylor:hover, main div.katy:hover{
+main div.taylor:hover, main div.katy:hover, main div.charli:hover, main div.sabrina:hover{
     text-decoration: underline;
 }
 
 main div.taylor div.not-image {background-image: url(../imagens/notícias/not-taylor.png);}
 main div.katy div.not-image {background-image: url(../imagens/notícias/not-katy.png);}
+main div.charli div.not-image {background-image: url(../imagens/notícias/not-charli.jpeg);}
+main div.sabrina div.not-image {background-image: url(../imagens/notícias/not-sabrina.jpeg);}
 
 /* ASIDE */
 
